projects/vb6parse/snapshots/parsers/files/endless_runner_game_vb6_0/form/endless_runner_game_vb6_0_form9_form_load.snap
---
source: projects/vb6parse/tests/files/endless_runner_game_vb6_0/form.rs
expression: form_file
---
form:
  Form:
    name: Form9
    tag: ""
    index: 0
    properties:
      appearance: ThreeD
      auto_redraw: Manual
      back_color:
        System:
          index: 15
      border_style: Sizable
      caption: Form9
      client_height: 13605
      client_left: 120
      client_top: 465
      client_width: 20880
      clip_controls: Clipped
      control_box: Excluded
      draw_mode: CopyPen
      draw_style: Solid
      draw_width: 1
      enabled: Enabled
      fill_color:
        System:
          index: 0
      fill_style: Transparent
      font:
        name: MS Sans Serif
        size: 8
        charset: 0
        weight: 400
        underline: false
        italic: false
        strikethrough: false
      font_transparent: Transparent
      fore_color:
        System:
          index: 18
      has_dc: HasContext
      height: 240
      help_context_id: 0
      icon: ~
      key_preview: false
      left: 0
      link_mode: None
      link_topic: Form9
      max_button: Included
      mdi_child: false
      min_button: Included
      mouse_icon: ~
      mouse_pointer: Default
      moveable: Moveable
      negotiate_menus: true
      ole_drop_mode: None
      palette: ~
      palette_mode: HalfTone
      picture: ~
      right_to_left: LeftToRight
      scale_height: 13605
      scale_left: 0
      scale_mode: Twip
      scale_top: 0
      scale_width: 20880
      show_in_taskbar: Show
      start_up_position: CenterScreen
      top: 0
      visible: Visible
      whats_this_button: Excluded
      whats_this_help: F1Help
      width: 240
      window_state: Maximized
    controls:
      - name: ProgressBar1
        tag: ""
        index: 0
        kind:
          Custom:
            properties:
              property_store:
                Appearance: "1"
                ExtentX: "24156"
                ExtentY: "2143"
                Height: "1215"
                Left: "5160"
                TabIndex: "2"
                Top: "8040"
                Version: "327682"
                Width: "13695"
            property_groups: []
      - name: Timer1
        tag: ""
        index: 0
        kind:
          Timer:
            properties:
              enabled: Enabled
              interval: 105
              left: 17520
              top: 0
      - name: Label2
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: Center
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                System:
                  index: 15
              back_style: Opaque
              border_style: None
              caption: Label1
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                RGB:
                  red: 255
                  green: 0
                  blue: 0
              height: 1095
              left: 12120
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 1
              tool_tip_text: ""
              top: 6120
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 3735
              word_wrap: NonWrapping
      - name: Label1
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: Center
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                System:
                  index: 15
              back_style: Opaque
              border_style: None
              caption: Label1
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                RGB:
                  red: 255
                  green: 0
                  blue: 0
              height: 1095
              left: 5160
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 0
              tool_tip_text: ""
              top: 6120
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 6135
              word_wrap: NonWrapping
      - name: Image1
        tag: ""
        index: 0
        kind:
          Image:
            properties:
              appearance: ThreeD
              border_style: None
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              height: 10380
              left: 2520
              mouse_icon: ~
              mouse_pointer: Default
              ole_drag_mode: Manual
              ole_drop_mode: None
              picture: ~
              stretch: true
              tool_tip_text: ""
              top: 1800
              visible: Visible
              whats_this_help_id: 0
              width: 17955
      - name: Shape1
        tag: ""
        index: 0
        kind:
          Shape:
            properties:
              back_color:
                RGB:
                  red: 0
                  green: 192
                  blue: 192
              back_style: Opaque
              border_color:
                System:
                  index: 8
              border_style: Solid
              border_width: 1
              draw_mode: CopyPen
              fill_color:
                RGB:
                  red: 0
                  green: 0
                  blue: 0
              fill_style: Transparent
              height: 11055
              left: 2160
              shape: Rectangle
              top: 1440
              visible: Visible
              width: 18615
    menus: []
objects:
  - uuid: 6b7e6392-850a-101b-afc0-4210102a8da7
    version: "1.3"
    unknown1: "0"
    file_name: COMCTL32.OCX
version:
  major: 5
  minor: 0
attributes:
  name: Form9
  global_name_space: Local
  creatable: "False"
  predeclared_id: "True"
  exposed: "False"
  description: ~
  ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: SubStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Form_Load
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: AssignmentStatement
                children:
                  - kind: MemberAccessExpression
                    children:
                      - kind: Identifier
                        text: Timer1
                      - kind: PeriodOperator
                        text: "."
                      - kind: Identifier
                        text: Enabled
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: BooleanLiteralExpression
                    children:
                      - kind: TrueKeyword
                        text: "True"
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: SubStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Timer1_Timer
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\r\n"
              - kind: AssignmentStatement
                children:
                  - kind: MemberAccessExpression
                    children:
                      - kind: Identifier
                        text: ProgressBar1
                      - kind: PeriodOperator
                        text: "."
                      - kind: Identifier
                        text: Value
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: BinaryExpression
                    children:
                      - kind: MemberAccessExpression
                        children:
                          - kind: Identifier
                            text: ProgressBar1
                          - kind: PeriodOperator
                            text: "."
                          - kind: Identifier
                            text: Value
                      - kind: Whitespace
                        text: " "
                      - kind: AdditionOperator
                        text: +
                      - kind: Whitespace
                        text: " "
                      - kind: NumericLiteralExpression
                        children:
                          - kind: IntegerLiteral
                            text: "5"
                  - kind: Newline
                    text: "\r\n"
              - kind: AssignmentStatement
                children:
                  - kind: MemberAccessExpression
                    children:
                      - kind: Identifier
                        text: Label1
                      - kind: PeriodOperator
                        text: "."
                      - kind: Identifier
                        text: Caption
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: StringLiteralExpression
                    children:
                      - kind: StringLiteral
                        text: "\"Loading....\""
                  - kind: Newline
                    text: "\r\n"
              - kind: AssignmentStatement
                children:
                  - kind: MemberAccessExpression
                    children:
                      - kind: Identifier
                        text: Label2
                      - kind: PeriodOperator
                        text: "."
                      - kind: Identifier
                        text: Caption
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: BinaryExpression
                    children:
                      - kind: MemberAccessExpression
                        children:
                          - kind: Identifier
                            text: ProgressBar1
                          - kind: PeriodOperator
                            text: "."
                          - kind: Identifier
                            text: Value
                      - kind: Whitespace
                        text: " "
                      - kind: Ampersand
                        text: "&"
                      - kind: Whitespace
                        text: " "
                      - kind: StringLiteralExpression
                        children:
                          - kind: StringLiteral
                            text: "\"%\""
                  - kind: Newline
                    text: "\r\n"
              - kind: IfStatement
                children:
                  - kind: IfKeyword
                    text: If
                  - kind: Whitespace
                    text: " "
                  - kind: ParenthesizedExpression
                    children:
                      - kind: LeftParenthesis
                        text: (
                      - kind: BinaryExpression
                        children:
                          - kind: MemberAccessExpression
                            children:
                              - kind: Identifier
                                text: ProgressBar1
                              - kind: PeriodOperator
                                text: "."
                              - kind: Identifier
                                text: Value
                          - kind: Whitespace
                            text: " "
                          - kind: EqualityOperator
                            text: "="
                          - kind: Whitespace
                            text: " "
                          - kind: MemberAccessExpression
                            children:
                              - kind: Identifier
                                text: ProgressBar1
                              - kind: PeriodOperator
                                text: "."
                              - kind: Identifier
                                text: Max
                      - kind: RightParenthesis
                        text: )
                  - kind: Whitespace
                    text: " "
                  - kind: ThenKeyword
                    text: Then
                  - kind: Newline
                    text: "\r\n"
                  - kind: StatementList
                    children:
                      - kind: AssignmentStatement
                        children:
                          - kind: MemberAccessExpression
                            children:
                              - kind: Identifier
                                text: Timer1
                              - kind: PeriodOperator
                                text: "."
                              - kind: Identifier
                                text: Enabled
                          - kind: Whitespace
                            text: " "
                          - kind: EqualityOperator
                            text: "="
                          - kind: Whitespace
                            text: " "
                          - kind: BooleanLiteralExpression
                            children:
                              - kind: FalseKeyword
                                text: "False"
                          - kind: Newline
                            text: "\r\n"
                      - kind: UnloadStatement
                        children:
                          - kind: UnloadKeyword
                            text: Unload
                          - kind: Whitespace
                            text: " "
                          - kind: IdentifierExpression
                            children:
                              - kind: MeKeyword
                                text: Me
                      - kind: Newline
                        text: "\r\n"
                      - kind: CallStatement
                        children:
                          - kind: Identifier
                            text: Form2
                          - kind: PeriodOperator
                            text: "."
                          - kind: Identifier
                            text: Show
                          - kind: Newline
                            text: "\r\n"
                  - kind: EndKeyword
                    text: End
                  - kind: Whitespace
                    text: " "
                  - kind: IfKeyword
                    text: If
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
